Fix wrong variant in visibility utility

--- a/utility-generators/_visibility.scss
+++ b/utility-generators/_visibility.scss
@@ -3,7 +3,7 @@
 @use 'sass:map';
 
 @mixin visibility($screen: null) {
-  $args: (map.get($variants, 'vertical-align'), $screen);
+  $args: (map.get($variants, 'visibility'), $screen);
 
   @include build-non-configurable-variants($args...) using ($prefix, $state) {
     .#{$prefix}visible#{$state}   { visibility: visible; }
